--- a/PeladaEsporteClube/app/src/main/res/values/strings.xml
+++ b/PeladaEsporteClube/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Pelada Esporte Clube</string>
+    <string name="facebook_app_id">332091940535685</string>
+    <string name="fb_login_protocol_scheme">fb332091940535685</string>
 </resources>
